Sandbox/01-02-2025/force-app/main/default/objects/Country__c/fields/Country_Name_Proper_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name_Proper_Name__c</fullName>
    <label>Country Name (Proper Name)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>