Sandbox/01-02-2025/force-app/main/default/objects/Country__c/fields/Major_Market__c.field-meta.xml
<CustomField>
    <fullName>Major_Market__c</fullName>
    <label>Major Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>