Sandbox/01-02-2025/force-app/main/default/objects/Country__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Central Asia</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>Eastern Europe</fullName>
            </value>
            <value>
                <fullName>MENA</fullName>
            </value>
            <value>
                <fullName>Australasia</fullName>
            </value>
            <value>
                <fullName>Sub-Saharan Africa</fullName>
            </value>
            <value>
                <fullName>Caribbean</fullName>
            </value>
            <value>
                <fullName>ROW</fullName>
            </value>
            <value>
                <fullName>Latam</fullName>
            </value>
            <value>
                <fullName>Southern Asia</fullName>
            </value>
            <value>
                <fullName>South East Asia</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>North Asia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APAC - Excluding SEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>