Sandbox/01-02-2025/force-app/main/default/objects/Country__c/fields/Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Region_Number__c</fullName>
    <formula>CASE(Region_Roll__c,
&quot;Americas&quot;,1,
&quot;Asia&quot;,2,
&quot;Europe&quot;,3,
&quot;MEA&quot;,3,
&quot;Oceania&quot;,4,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region (Number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>