Sandbox/01-02-2025/force-app/main/default/objects/Country__c/fields/Region_Rollup_Index_Report__c.field-meta.xml
<CustomField>
    <fullName>Region_Rollup_Index_Report__c</fullName>
    <label>Region Roll-up Index Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>